--- a/match_timer.html
+++ b/match_timer.html
@@ -45,6 +45,10 @@
 </head>
 <body>
     <span id="match-clock">00:00</span>
+    <div>
+        <label for="custom-time">Set Custom Start Time (MM:SS):</label>
+        <input type="text" id="custom-time" placeholder="MM:SS">
+    </div>
     <div id="status">Waiting to start...</div>
     <div id="controls">
         <button id="start" onclick="startClock()">Start</button>
@@ -62,6 +66,17 @@
 
         function startClock() {
             if (!running) {
+                let customTime = document.getElementById("custom-time").value;
+                if (customTime && elapsedTime === 0) {
+                    let parts = customTime.split(":");
+                    if (parts.length === 2) {
+                        let minutes = parseInt(parts[0], 10);
+                        let seconds = parseInt(parts[1], 10);
+                        if (!isNaN(minutes) && !isNaN(seconds)) {
+                            elapsedTime = (minutes * 60 + seconds) * 1000;
+                        }
+                    }
+                }
                 startTime = Date.now() - elapsedTime;
                 running = true;
                 updateClock();
